[package]
name = "reframework"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "sys",
    "examples/weapon_stay_big_plugin"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reframework-sys = { version = "0.1.0", path = "./sys" }

winapi = { version = "0.3", features = ["debugapi"] }
